Added section about Computer Science intrests Changed font

--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
   I am Christian Naida, a dedicated student at Michigan State University, majoring in Business Management at the Broad School of Business and minoring in Computer Science. My academic journey is characterized by a relentless pursuit of knowledge in both business and technology. Through my studies, I'm developing the strategic thinking and technical skills necessary to excel in the corporate world, where the fusion of these disciplines is essential for innovation and success. I am excited to leverage my education and experiences at MSU to make a positive impact in the business realm, integrating technology and driving future growth.
 </p>
 <h2>
-  Links
+  Computer Science Interests
+</h2>
+<p>
+  I'm deeply into coding and love getting my hands dirty with Spring Boot, Java, Python, and C++. I enjoy turning ideas into reality, whether it's building cool web apps or automating stuff to make life easier. Apart from coding, I'm really into machine learning and computer vision. I'm always looking to learn more and dive into new projects that challenge me and push tech boundaries.
+</p>
+
+<h2>
+  CV
 </h2>
 <p>
   <a href="https://drive.google.com/file/d/149u0n1B-R4YZo65pFunII-4ClTDm-zAz/view?usp=sharing">Curriculum Vitae</a>
